appinventor/appengine/war/static/css/Ya.css
/* ... */
.inline-label{
  display:inline;
  margin-right:5px;
}

.time-label{
  display:inline;
  margin-right:15px;
  font-style:italic;
}
.seemore-link {
  color: #333399;
  border-bottom: 1px dotted #b3c833;
  font-weight: 300; font-size: 14px; line-height: 1.75;
  display:inline;
  margin-right:5px;
}

.seemore-link:hover {
  color: #980000;
  cursor: pointer;
  text-decoration:underline;
}


/* General gallery helper styles */
.message-popup {
  background-color: #fff;
  border: 1px solid lightgrey;
  padding: 20px;
}
.block {
  display: block;
}
.inline {
  display: inline;
}
.inline-block {
  display: inline-block;
}
.clearfix:after {
  content: ".";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both;
}

/* Blocks editor */
.svg {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

/* TypeBlocking plugin autocomplete styles */
.fi-input {
  font-family: monospace;
  min-width: 200px;
  padding: 2px 4px;
  border: 1px solid #ccc;
  outline: none;
}
.fi-list {
  list-style: none;
  margin: 4px 0 0;
  padding: 0;
  max-height: 160px;
  overflow-y: auto;
  border: 1px solid #ccc;
  background: #fff;
  min-width: 200px;
  font-family: monospace;
}
.fi-list li {
  padding: 2px 6px;
  cursor: pointer;
}
.fi-hl {
  background: #bde4ff;
}

.goog-hsva-palette, .goog-hsva-palette-sm {
  border: 0;
}

div.vector-marker>svg, div.leaflet-marker-icon>img {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 2px;
}

div.dropdiv {
  position: fixed;
  z-index: 1000000;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: none;
  pointer-events: none;
}

div.dropdiv.good {
  background-color: rgba(128, 255, 128, 0.3);
  border: 8px dashed darkgreen;
  display: block;
}

div.dropdiv div {
  position: absolute;
  top: 50%;
  width: 100%;
  text-align: center;
  pointer-events: none;
}

div.dropdiv p {
  text-align: center;
  top: -15pt;
  font-size: 18pt;
  line-height: 30pt;
  color: darkgreen;
  margin: 0;
  position: relative;
}

.ya-Toolbar {
  display: flex;
  justify-content: space-between;
}

.ya-Toolbar .left {
  min-width: 220px;
  text-align: left;
}

.ya-Toolbar .right {
  flex-shrink: 0;
  text-align: right;
}

.ya-Toolbar .center {
  text-align: center;
  min-width: fit-content;
}

.ya-Toolbar>div>div {
  margin: 2px;
}

.ya-ProjectName {
  display: inline-block;
}

.download-button {
  display: grid !important;
  max-width: 130px;
  margin: 0 !important;
  margin-top: 12px !important;
  margin-left: -3px !important;
  height: 130px;
}

.download-icon {
  height: 110px;
  width: 110px;
  margin-left: auto;
  margin-right: auto;
}

.classic .download-barcode:before {
  content: "";
  background-color: #888;
  position: absolute;
  width: 1px;
  height: 160px;
  top: 40px;
  left: 50%;
  display: block;
}

.listItem:nth-child(2n + 0) {
  background: rgba(200, 200, 200, 0.1);
}

.components-tree-filter {
  margin-top: 1px;
  margin-left: 1px;
  font-size: 11px;
}

.ode-UserSettingsDialog .dialogContent {
  width: 768px;
}

.image-radio-group {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.image-radio {
  position: relative;
  text-align: center;
}

.hidden-radio {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.image-label {
  display: flex;
  cursor: pointer;
  flex-direction: column;
  height: 100%;
}

.image-label img {
  box-sizing: border-box;
  width: 360px;
  object-fit: cover;
  border: 3px solid transparent;
  border-radius: 5px;
  transition: border-color 0.2s ease-in-out;
}

.hidden-radio:checked + div img {
  border-color: #7D9D36;
}

.image-label:hover img {
  border-color: #b3c833;
}

.hidden-radio:focus div + img {
  box-shadow: 0 0 0 2px rgba(186, 238, 86, 0.6);
}

.image-label > .gwt-Label {
  flex-grow: 1;
  align-content: flex-end;
}

@media(max-width: 768px) {
  .ode-UserSettingsDialog .dialogContent {
    width: 100%;
    max-width: 360px;
    flex-direction: column;
  }
  .image-radio-group {
    flex-direction: column;
  }
}

.popup {
  background-color: transparent;
  position: absolute;
}

.popup .popup-triangle {
  position: absolute;
  top: -8px;
  left: calc(50% - 8px);
  height: 0;
  width: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-bottom: 8px solid #128BA8;
  border-top: 0 solid transparent;
}

.popup .popup-content {
  background-color: #128BA8;
  color: #fff;
  padding: 8px 16px;
  max-width: 300px;
  text-align: justify;
  border-radius: 8px;
}

.popup a {
  color: #fff;
  text-decoration: underline;
}
.ode-DialogBox-light .dark, .ode-DialogBox-dark .light {
  display: none;
}

#aiConsolePanel {
  height: 100%;
  background-color: white;
  overflow-y: scroll;
}

#aiConsolePanel .Warning {
  color: rgb(255, 153, 0);
  font-weight: bold;
}

#aiConsolePanel .Error {
  color: red;
  font-weight: bolder;
}

